--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="container">
-      <h1>Rng distribution 1-100</h1>
+      <h1>RNG distribution 1-100</h1>
       <div>
         <label for="num-random-numbers">Amount of random generations:</label>
         <input type="number" id="num-random-numbers" value="20000">
