--- a/index.html
+++ b/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>RNG distribution </title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div id="container">
-      <h1>Random Number Distribution (1-100)</h1>
-      <div>
-        <label for="num-random-numbers">Total numbers to generate</label>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RNG Distribution</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div id="container">
+    <h1>Random Number Distribution (1-100)</h1>
+    
+    <div id="form-container">
+      <div class="input-group">
+        <label for="num-random-numbers">Amount</label>
         <input type="number" id="num-random-numbers" value="20000">
-        <br>
-        <label for="interval">Time between each number generated(milliseconds):</label>
+      </div>
+      <div class="input-group">
+        <label for="interval">Speed per number (ms)</label>
         <input type="number" id="interval" value="6">
       </div>
       <div>
         <button onclick="generateHistogram()">Run</button>
       </div>
-      <div>
-        <canvas id="histogram"></canvas>
-      </div>
-      <script src="code.js"></script>
     </div>
-  </body>
+    
+    <div class="canvas-container">
+      <canvas id="bar-canvas"></canvas>
+      <canvas id="line-canvas"></canvas>
+    </div>
+  </div>
+
+  <script src="code.js"></script>
+</body>
 </html>
